@@ -1,3 +1,7 @@
+2011-10-18  Xavier Perseguers  <xavier.perseguers@typo3.org>
+
+	* [BUGFIX] #30876: ll-XML to XLIFF conversion fails in TYPO3 4.5
+
 2011-10-10  Oliver Hader  <oliver.hader@typo3.org>
 
 	* [TASK] Release of version 3.3.0
